# st-uni-core

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  emscripten-compile.bat  emscripten-minimal.bat  emscripten-run.bat  emscripten-testbed.bat  emscripten-ui.bat  emscripten-wasm.bat  make-project-vs2022.bat
examples/: CMakeLists.txt
examples/assets/: database.xml  inventory.xml  logic.wasm  release.wasm  ui.xml
examples/minimal/: minimal.cpp  minimal.hpp
examples/raycast/: raycast.cpp  raycast.hpp
examples/testbed/: example-ui.cpp  example.cpp  example.hpp  example01.cpp  example01.hpp  example02.cpp  example02.hpp  example03.cpp  example03.hpp  example04.cpp  example04.hpp  example05.cpp  example05.hpp  example06.cpp  example06.hpp  example07.cpp  example07.hpp  example08.cpp  example08.hpp  example09.cpp  example09.hpp  example10.cpp  example10.hpp  testbed.cpp  testbed.hpp
examples/ui/: Inventory.cpp  Inventory.hpp  InventoryUI.cpp  InventoryUI.hpp  InventoryView.cpp  InventoryView.hpp  Item.cpp  Item.hpp  ItemDatabase.cpp  ItemDatabase.hpp  ItemDatabaseUI.cpp  ItemDatabaseUI.hpp  ui.cpp  ui.hpp
examples/wasm/: wasm.cpp  wasm.hpp
examples/wasm/logic/: asconfig.json  index.ts  package-lock.json  package.json
logic/: CMakeLists.txt
logic/include/unicore/app/: Core.hpp  DisplayCore.hpp  RendererCore.hpp  SDLCore.hpp
logic/src/: Core.cpp  DisplayCore.cpp  RendererCore.cpp  SDLCore.cpp
plugins/: CMakeLists.txt
plugins/fnt/: CMakeLists.txt
plugins/fnt/include/unicore/fnt/: BitmapFont.hpp  DekovirFontLoader.hpp  FNTPlugin.hpp
plugins/fnt/src/: BitmapFont.cpp  BitmapFontLoader.cpp  BitmapFontLoader.hpp  DekovirFontLoader.cpp  DekovirFontLoader.hpp  FNTPlugin.cpp
plugins/grid/: CMakeLists.txt
plugins/grid/include/unicore/grid/: GridMap.hpp  GridPlugin.hpp  GridTopology.hpp
plugins/grid/src/: GridPlugin.cpp  GridTopology.cpp
plugins/gridmap/: CMakeLists.txt
plugins/gridmap/include/unicore/gridmap/: GridMap.hpp  GridMapPlugin.hpp  TileSet.hpp  Topology.hpp
plugins/gridmap/src/: GridMap.cpp  GridMapPlugin.cpp  TileSet.cpp  Topology.cpp
plugins/imgui/: CMakeLists.txt
plugins/imgui/configs/: uc_imconfig.h
plugins/imgui/include/unicore/imgui/: ImGuiContext.hpp  ImGuiDefs.hpp  ImGuiPlugin.hpp  ImGuiRender.hpp
plugins/imgui/src/: ImGuiContext.cpp  ImGuiDefs.cpp  ImGuiPlugin.cpp  ImGuiRender.cpp
plugins/pattern/: CMakeLists.txt
plugins/pattern/include/unicore/pattern/: Pattern.hpp  PatternParser.hpp
plugins/pattern/src/: Pattern.cpp  PatternParser.cpp
plugins/raycast/: CMakeLists.txt
plugins/raycast/include/unicore/raycast/: Raycast.hpp  RaycastRenderer.hpp
plugins/raycast/src/: Raycast.cpp  RaycastRenderer.cpp
plugins/remoteui/: CMakeLists.txt
plugins/remoteui/include/unicore/remoteui/: Document.hpp  DocumentParseXML.hpp  DocumentXMLLoader.hpp  Element.hpp  RemoteUIPlugin.hpp  View.hpp  ViewImGui.hpp
plugins/remoteui/src/: Document.cpp  DocumentParseXML.cpp  DocumentXMLLoader.cpp  Element.cpp  RemoteUIPlugin.cpp  View.cpp  ViewImGui.cpp
plugins/scene/: CMakeLists.txt
plugins/scene/include/unicore/scene/: Scene.hpp  SceneComponent.hpp  SceneHierarchy.hpp  SceneNode.hpp  ScenePlugin.hpp
plugins/scene/src/: Scene.cpp  SceneComponent.cpp  SceneHierarchy.cpp  SceneNode.cpp  ScenePlugin.cpp
plugins/stb/: CMakeLists.txt
plugins/stb/include/unicore/stb/: StbEasyFont.hpp  StbEasyFontLoader.hpp  StbPlugin.hpp  StbRectPack.hpp  StbSurfaceLoader.hpp  StbTTFont.hpp  StbTTFontFactory.hpp  StbTTFontFactoryLoader.hpp
plugins/stb/src/: EasyFont.cpp  EasyFont.hpp  EasyFontCreator.cpp  EasyFontCreator.hpp  STBSurfaceLoader.cpp  STBSurfaceLoader.hpp  StbEasyFont.cpp  StbEasyFontCreator.cpp  StbEasyFontCreator.hpp  StbEasyFontLoader.cpp  StbEasyFontLoader.hpp  StbPlugin.cpp  StbRectPack.cpp  StbSurfaceLoader.cpp  StbSurfaceLoader.hpp  StbTTFont.cpp  StbTTFontCreator.cpp  StbTTFontCreator.hpp  StbTTFontFactory.cpp  StbTTFontFactoryLoader.cpp  StbTTFontFactoryLoader.hpp  StbTTFontLoader.cpp  StbTTFontLoader.hpp  SurfaceLoader.cpp  SurfaceLoader.hpp
plugins/szip/: CMakeLists.txt
plugins/szip/include/unicore/szip/: SZipError.hpp  SZipFileData.hpp  SZipFilePlugin.hpp  SZipFileProvider.hpp  SZipFileProviderLoader.hpp  SZipUtils.hpp
plugins/szip/src/: SZipError.cpp  SZipError.hpp  SZipFileArchiveLoader.cpp  SZipFileArchiveLoader.hpp  SZipFileData.cpp  SZipFilePlugin.cpp  SZipFileProvider.cpp  SZipFileProviderLoader.cpp  SZipUtils.cpp
plugins/ui/: CMakeLists.txt
plugins/ui/include/unicore/ui/: UIAction.hpp  UIAttribute.hpp  UIComponent.hpp  UIDataModel.hpp  UIDocument.hpp  UIDocumentParseXML.hpp  UIDocumentXMLLoader.hpp  UIEditor.hpp  UIElement.hpp  UINode.hpp  UINodeValues.hpp  UIPlugin.hpp  UISchemes.hpp  UITemplate.hpp  UIView.hpp  UIViewImGui.hpp
plugins/ui/src/: NodeComponent.cpp  UIComponent.cpp  UIDataModel.cpp  UIDocument.cpp  UIDocumentParseXML.cpp  UIDocumentXMLLoader.cpp  UINode.cpp  UINodeValues.cpp  UIPlugin.cpp  UITemplate.cpp  UIView.cpp  UIViewImGui.cpp
plugins/ui/src/components/: Component.cpp  GroupComponent.cpp  InputComponent.cpp  ItemComponent.cpp  ListComponent.cpp  TableComponent.cpp  TextComponent.cpp  VisualComponent.cpp
plugins/ui/src/editors/: EditorComponent.cpp  EditorElement.cpp
plugins/ui/src/elements/: Element.cpp  ElementContainer.cpp  InputElement.cpp  NodeElement.cpp  VisualElement.cpp
plugins/ui/src/schemes/: GroupSchemeNode.cpp  InputSchemeNode.cpp  NodeScheme.cpp  Scheme.cpp  SchemeNode.cpp  VisualSchemeNode.cpp
plugins/ui/src/templates/: Template.cpp
plugins/wasm/: CMakeLists.txt
plugins/wasm/include/unicore/wasm/: WADefs.hpp  WAEnvironment.hpp  WAFunction.hpp  WAModule.hpp  WAPlugin.hpp  WARuntime.hpp  WasmDefs.hpp  (+5 more)
plugins/wasm/src/: WAEnvironment.cpp  WAFunction.cpp  WAModule.cpp  WAPlugin.cpp  WARuntime.cpp  WasmEnvironment.cpp  WasmFunction.cpp  WasmModule.cpp  WasmPlugin.cpp  WasmRuntime.cpp
plugins/xml/: CMakeLists.txt
plugins/xml/src/: XMLData.cpp  XMLDataLoader.cpp  XMLLoader.cpp  XMLLoader.hpp  XMLNode.cpp  XMLPlugin.cpp
(+532 files in other folders)
